# workTrialShadow_Jason

./: .env.example  .gitignore  README.md
backend/: .gitignore  app.py  models.py  pyproject.toml
backend/retrieval_service/: __init__.py  agent.py  doc_utils.py  gemni_api_utils.py  google_api_utils.py  ocr_utils.py  openai_api_utils.py  rag_utils.py  react_agent_utils.py  search_utils.py  supabase_utils.py  thread_pool_manager.py
backend/retrieval_service/api/: __init__.py  gemini_client.py  google_client.py  openai_client.py
backend/retrieval_service/core/: __init__.py  agent.py  mixed.py  rag.py  react.py
backend/retrieval_service/data/: __init__.py  database.py  initialization.py
backend/retrieval_service/infrastructure/: __init__.py  batch.py  logging.py  monitoring.py  threading.py
backend/retrieval_service/processing/: __init__.py  documents.py  ocr.py  parsers.py
backend/retrieval_service/search/: __init__.py  fuzzy.py  keyword.py  reference.py  vector.py
backend/tests/: test_api_response_equivalence.py  test_backward_compatibility.py  test_database_imports.py  test_embedding_api_consistency.py  test_error_handling_preservation.py  test_file_type_processing.py  test_infrastructure_imports.py  test_llm_inference_api_consistency.py  test_logging_properties.py  test_retrieval_mode_functionality.py  test_summary_api_consistency.py
docs/: Architecture.md  DEBUG_MODE.md  PARALLEL_PROCESSING.md  db_init.sql  initialization_flow.md
frontend/: chat.html  chat.js  index.html  login.html  monitor.html  onboarding.html  script.js  serve.py  style.css  (+1 more)
